getting closer to being able to run successfully from sbt and package wars correctly.  Now running against local h2 when in testing to isolate issues.  Also, rewrote the stackadaptor config reader so that it actually honoured the disabling behaviour